# matmul_phantom

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: ckks_evaluator.cu  ckks_evaluator.cuh  ckks_wrapper.cuh  matmul_test.cu  matrix_mul.cu  matrix_mul.cuh  row_pack.cpp  row_pack.h
